# zhihu-novel--

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
.github/workflows/: build-release.yml
docs/superpowers/plans/: 2026-04-06-product-redesign.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/ChapterOutline/: ChapterOutline.tsx
src/components/CharacterDesign/: CharacterDesign.tsx
src/components/CoverMaterials/: CoverMaterials.tsx
src/components/DraftWriting/: DraftWriting.tsx
src/components/HotspotAnalysis/: HotspotAnalysis.tsx
src/components/HotspotSurvey/: HotspotSurvey.tsx
src/components/Inspiration/: Inspiration.tsx
src/components/Layout/: Layout.tsx  Sidebar.tsx
src/components/OutlineGen/: OutlineGen.tsx
src/components/Settings/: Settings.tsx
src/components/TopicSelect/: TopicSelect.tsx
src/components/WorldSetting/: WorldSetting.tsx
src/components/WritingAssist/: WritingAssist.tsx
src/components/ui/: CharacterCard.tsx  InspirationCard.tsx  MarkdownRenderer.tsx
src/hooks/: useLLM.ts
src/lib/: config.ts  context.tsx  db.ts  llm.ts  types.ts
src/prompts/: chapterOutline.ts  character.ts  check.ts  cover.ts  hotspot.ts  index.ts  inspiration.ts  outline.ts  polish.ts  topic.ts  worldSetting.ts  writing.ts
src/styles/: globals.css
tests/lib/: llm.test.ts  prompts.test.ts
