[package]
name = "storyforge"
version = "1.0.0"
description = "知乎盐选创作者一站式 AI 写作工具"
authors = ["StoryForge"]
edition = "2021"

[lib]
name = "storyforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
